Apps/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calibre
  name: calibre-service
  namespace: calibre
spec:
  ports:
    - name: "8080"
      port: 80
      targetPort: 8080
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "8181"
      port: 8181
      targetPort: 8181
  selector:
    app: calibre
